Finishing Problem Statement in Introduction

--- a/manuscript.bib
+++ b/manuscript.bib
@@ -71,6 +71,15 @@
   file = {C:\Users\uif72473\Zotero\storage\C8GXNKMA\Alsabaan et al. - 2013 - Optimization of Fuel Cost and Emissions Using V2V .pdf}
 }
 
+@inproceedings{anjomshoae2019explainable,
+  title = {Explainable Agents and Robots: {{Results}} from a Systematic Literature Review},
+  booktitle = {18th International Conference on Autonomous Agents and Multiagent Systems ({{AAMAS}} 2019), Montreal, Canada, May 13--17, 2019},
+  author = {Anjomshoae, Sule and Najjar, Amro and Calvaresi, Davide and Fr{\"a}mling, Kary},
+  year = 2019,
+  pages = {1078--1088},
+  publisher = {{International Foundation for Autonomous Agents and Multiagent Systems}}
+}
+
 @article{asadiPredictiveCruiseControl2010,
   title = {Predictive {{Cruise Control}}: {{Utilizing Upcoming Traffic Signal Information}} for {{Improving Fuel Economy}} and {{Reducing Trip Time}}},
   author = {Asadi, Behrang and Vahidi, Ardalan},
@@ -354,6 +363,13 @@
   author = {Conn, Andrew R and Gould, Nicholas IM and Toint, Philippe L},
   year = 2000,
   publisher = {SIAM}
+}
+
+@article{dani2024human,
+  title = {Human-in-the-Loop Robot Control for Human-Robot Collaboration},
+  author = {Dani, Ashwin P and Salehi, Iman and Rotithor, Ghananeel and Trombetta, Daniel and Ravichandar, Harish},
+  year = 2024,
+  journal = {IEEE Control Systems Magazine}
 }
 
 @phdthesis{dato2021apprentissage,
@@ -898,6 +914,17 @@
   file = {C:\Users\uif72473\Zotero\storage\QQZMUG6Y\Krause and Bengler - 2012 - Traffic Light Assistant-Driven in a Simulator.pdf}
 }
 
+@article{kress2021formalizing,
+  title = {Formalizing and Guaranteeing Human-Robot Interaction},
+  author = {{Kress-Gazit}, Hadas and Eder, Kerstin and Hoffman, Guy and Admoni, Henny and Argall, Brenna and Ehlers, R{\"u}diger and Heckman, Christoffer and Jansen, Nils and Knepper, Ross and K{\v r}et{\'\i}nsk{\`y}, Jan and others},
+  year = 2021,
+  journal = {Communications of the ACM},
+  volume = {64},
+  number = {9},
+  pages = {78--84},
+  publisher = {ACM New York, NY, USA}
+}
+
 @inproceedings{le2017gogp,
   title = {Gogp: {{Fast}} Online Regression with Gaussian Processes},
   booktitle = {2017 {{IEEE}} International Conference on Data Mining ({{ICDM}})},
@@ -1108,6 +1135,15 @@
   year = 2014,
   journal = {Advances in Neural Information Processing Systems},
   volume = {27}
+}
+
+@misc{mermillod2013stability,
+  title = {The Stability-Plasticity Dilemma: {{Investigating}} the Continuum from Catastrophic Forgetting to Age-Limited Learning Effects},
+  author = {Mermillod, Martial and Bugaiska, Aur{\'e}lia and Bonin, Patrick},
+  year = 2013,
+  volume = {4},
+  pages = {504},
+  publisher = {Frontiers Media SA}
 }
 
 @article{messaoudiAgentbasedIntervehicleCooperative2018,
